@@ -35,9 +35,7 @@ import org.hypertrace.core.documentstore.OrderBy;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * An implementation of the {@link Collection} interface with MongoDB as the backend
- */
+/** An implementation of the {@link Collection} interface with MongoDB as the backend */
 public class MongoCollection implements Collection {
   private static final Logger LOGGER = LoggerFactory.getLogger(MongoCollection.class);
   public static final String ID_KEY = "_id";
@@ -58,13 +56,14 @@ public class MongoCollection implements Collection {
     try {
       JsonNode jsonNode = MAPPER.readTree(jsonString);
 
-      //escape "." and "$" in field names since Mongo DB does not like them
+      // escape "." and "$" in field names since Mongo DB does not like them
       JsonNode sanitizedJsonNode = recursiveClone(jsonNode, this::encodeKey);
       BasicDBObject setObject = BasicDBObject.parse(MAPPER.writeValueAsString(sanitizedJsonNode));
       setObject.put(ID_KEY, key.toString());
-      BasicDBObject dbObject = new BasicDBObject("$set", setObject)
-          .append("$currentDate", new BasicDBObject(LAST_UPDATE_TIME, true))
-          .append("$setOnInsert", new BasicDBObject(CREATED_TIME, System.currentTimeMillis()));
+      BasicDBObject dbObject =
+          new BasicDBObject("$set", setObject)
+              .append("$currentDate", new BasicDBObject(LAST_UPDATE_TIME, true))
+              .append("$setOnInsert", new BasicDBObject(CREATED_TIME, System.currentTimeMillis()));
 
       // Create selection criteria from the key.
       BasicDBObject selectionCriteria = new BasicDBObject();
@@ -87,10 +86,11 @@ public class MongoCollection implements Collection {
     try {
       JsonNode jsonNode = MAPPER.readTree(jsonString);
 
-      //escape "." and "$" in field names since Mongo DB does not like them
+      // escape "." and "$" in field names since Mongo DB does not like them
       JsonNode sanitizedJsonNode = recursiveClone(jsonNode, this::encodeKey);
-      BasicDBObject dbObject = new BasicDBObject(
-          subDocPath, BasicDBObject.parse(MAPPER.writeValueAsString(sanitizedJsonNode)));
+      BasicDBObject dbObject =
+          new BasicDBObject(
+              subDocPath, BasicDBObject.parse(MAPPER.writeValueAsString(sanitizedJsonNode)));
       BasicDBObject setObject = new BasicDBObject("$set", dbObject);
 
       // Create selection criteria from the key.
@@ -130,17 +130,12 @@ public class MongoCollection implements Collection {
     return tgt;
   }
 
-
   private String encodeKey(String key) {
-    return key.replace("\\", "\\\\")
-        .replace("$", "\\u0024")
-        .replace(".", "\\u002e");
+    return key.replace("\\", "\\\\").replace("$", "\\u0024").replace(".", "\\u002e");
   }
 
   private String decodeKey(String key) {
-    return key.replace("\\u002e", ".")
-        .replace("\\u0024", "$")
-        .replace("\\\\", "\\");
+    return key.replace("\\u002e", ".").replace("\\u0024", "$").replace("\\\\", "\\");
   }
 
   @Override
@@ -151,8 +146,10 @@ public class MongoCollection implements Collection {
     if (query.getFilter() != null) {
       map = parseQuery(query.getFilter());
     }
-    LOGGER.debug("Sending query to mongo: {} : {}",
-        collection.getFullName(), Arrays.toString(map.entrySet().toArray()));
+    LOGGER.debug(
+        "Sending query to mongo: {} : {}",
+        collection.getFullName(),
+        Arrays.toString(map.entrySet().toArray()));
 
     // Assume its SimpleAndQuery for now
     DBObject ref = new BasicDBObject(map);
@@ -192,11 +189,13 @@ public class MongoCollection implements Collection {
           //  DB document directly as proto message.
           next.removeField(ID_KEY);
           String jsonString;
-          JsonWriterSettings relaxed = JsonWriterSettings.builder().outputMode(JsonMode.RELAXED).build();
+          JsonWriterSettings relaxed =
+              JsonWriterSettings.builder().outputMode(JsonMode.RELAXED).build();
           if (next instanceof BasicDBObject) {
             jsonString = ((BasicDBObject) next).toJson(relaxed);
           } else {
-            LOGGER.info("Converting to bson document before converting JSON for none BasicDBObject type");
+            LOGGER.info(
+                "Converting to bson document before converting JSON for none BasicDBObject type");
             jsonString = org.bson.Document.parse(next.toString()).toJson(relaxed);
           }
           JsonNode jsonNode = MAPPER.readTree(jsonString);
@@ -226,8 +225,7 @@ public class MongoCollection implements Collection {
     BasicDBObject selectionCriteria = new BasicDBObject(ID_KEY, key.toString());
     BasicDBObject unsetObject = new BasicDBObject("$unset", new BasicDBObject(subDocPath, ""));
 
-    WriteResult writeResult = collection.update(
-        selectionCriteria, unsetObject, false, false);
+    WriteResult writeResult = collection.update(selectionCriteria, unsetObject, false, false);
     if (LOGGER.isDebugEnabled()) {
       LOGGER.debug("Write result: " + writeResult.toString());
     }
@@ -255,17 +253,19 @@ public class MongoCollection implements Collection {
       Filter.Op op = filter.getOp();
       switch (op) {
         case OR:
-        case AND: {
-          List<Map<String, Object>> childMapList = Arrays.stream(filter.getChildFilters())
-              .map(this::parseQuery)
-              .filter(map -> !map.isEmpty())
-              .collect(Collectors.toList());
-          if (!childMapList.isEmpty()) {
-            return Map.of("$"+op.name().toLowerCase(), childMapList);
-          } else {
-            return Collections.emptyMap();
+        case AND:
+          {
+            List<Map<String, Object>> childMapList =
+                Arrays.stream(filter.getChildFilters())
+                    .map(this::parseQuery)
+                    .filter(map -> !map.isEmpty())
+                    .collect(Collectors.toList());
+            if (!childMapList.isEmpty()) {
+              return Map.of("$" + op.name().toLowerCase(), childMapList);
+            } else {
+              return Collections.emptyMap();
+            }
           }
-        }
         default:
           throw new UnsupportedOperationException(
               String.format("Boolean operation:%s not supported", op));
@@ -360,8 +360,9 @@ public class MongoCollection implements Collection {
         bulkWriteOperation
             .find(selectionCriteria)
             .upsert()
-            .update(new BasicDBObject("$set", dbObject)
-                .append("$currentDate", new BasicDBObject("_lastUpdateTime", true)));
+            .update(
+                new BasicDBObject("$set", dbObject)
+                    .append("$currentDate", new BasicDBObject("_lastUpdateTime", true)));
       }
 
       BulkWriteResult result = bulkWriteOperation.execute();
